[package]
name = "example-hello-world"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
axum = { path = "../../axum" }
postgres = {version = "0.19.2" , features = ["with-serde_json-1", "with-chrono-0_4", "with-time-0_3"] }
tokio = { version = "1.16.1", features = ["full"] }
tokio-postgres = "0.7.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
